# qwen0.8B-full-profile

./: README.md  pyproject.toml
examples/: custom_qwen_vl_dry_run.sh
scripts/: profile_custom.sh  profile_supported.sh
src/qaihub_qwen_profiler/: __init__.py  aihub_runner.py  cache.py  cli.py  defaults.py  export_custom.py  image_utils.py  supported_models.py
